# active-colloids-simulation

./: .gitignore  .gitmodules  3d_hist.py  CMakeLists.txt  Makefile  gen_data.py  main.cpp  notes.md  python.py  python_pretty.py
